CMAKE_MINIMUM_REQUIRED( VERSION 3.9 )
PROJECT( secp256k1 )
CMAKE_POLICY(SET CMP0012 NEW)

IF(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY )
	SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" )
ENDIF(  )
IF(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY )
	SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib" )
ENDIF(  )

SET( SECP_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" )
SET( SECP_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src" )
SET( SECP_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" )

LIST( APPEND CMAKE_MODULE_PATH "${LIBBITCOIN_ROOT_DIR}/CMake" )

INCLUDE_DIRECTORIES( ${SECP_ROOT_DIR} ${SECP_SRC_DIR} )

FILE( GLOB SECP_INC_FILES "${SECP_INC_DIR}/*.h" )
FILE( GLOB SECP_SRC_INC_FILES "${SECP_SRC_DIR}/*.h" )

FILE( GLOB SECP_SRC_OTHER_FILES "${SECP_SRC_DIR}/*.c" )
LIST( REMOVE_ITEM SECP_SRC_OTHER_FILES "${SECP_SRC_DIR}/secp256k1.c" )

FILE( GLOB SECP_SRC_FILES "${SECP_SRC_DIR}/secp256k1.c" )

FILE( GLOB SECP_PACK_FILES "${SECP_ROOT_DIR}/packaging/nuget/*.*" )
FILE( GLOB SECP_GMP_FILES "${SECP_ROOT_DIR}/packaging/nuget/gmp/*.*" )

FILE( GLOB SECP_RES_FILES "${SECP_ROOT_DIR}/builds/msvc/*.rc" "${SECP_ROOT_DIR}/builds/msvc/*.h" )

IF( WIN32 )
	ADD_DEFINITIONS( -DUSE_SCALAR_8X32 
			-DUSE_NUM_NONE 
			-DUSE_FIELD_INV_BUILTIN
			-DUSE_SCALAR_INV_BUILTIN
			-DSECP256K1_STATIC
			-DUSE_FIELD_10X26 )
ENDIF(  )

SOURCE_GROUP( include FILES ${SECP_INC_FILES} )

SOURCE_GROUP( packaging FILES ${SECP_PACK_FILES} )
SOURCE_GROUP( packaging\\gmp FILES ${SECP_GMP_FILES} )

SOURCE_GROUP( resource FILES ${SECP_RES_FILES} )

SOURCE_GROUP( src FILES ${SECP_SRC_FILES} )
SOURCE_GROUP( src\\include FILES ${SECP_SRC_INC_FILES} )
 
ADD_LIBRARY( secp256k1 STATIC ${SECP_SRC_FILES} ${SECP_INC_FILES} ${SECP_SRC_INC_FILES} ${SECP_PACK_FILES} ${SECP_GMP_FILES} ${SECP_RES_FILES} )

if ( MSVC )
    set_target_properties( secp256k1 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../libs )
    set_target_properties( secp256k1 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../../../libs )
    set_target_properties( secp256k1 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/../../../libs )
endif ( MSVC )
